--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "start": "node index"
   },
   "author": "jean Pierre",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
+  }
 }
